--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@ionic-native/status-bar": "~4.11.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "^7.1.1",
+    "cordova-android": "7.1.1",
     "cordova-plugin-ble-central": "^1.2.2",
     "cordova-plugin-bluetooth-serial": "^0.4.7",
     "cordova-plugin-compat": "^1.2.0",
