--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@angular/router": "^7.2.15",
     "@ionic-native/ble": "^4.12.0",
     "@ionic-native/bluetooth-serial": "^4.12.0",
     "@ionic-native/core": "~4.11.0",
