--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
-    "@angular/router": "^7.2.15",
+    "@angular/router": "^5.2.11",
     "@ionic-native/ble": "^4.12.0",
     "@ionic-native/bluetooth-serial": "^4.12.0",
     "@ionic-native/core": "~4.11.0",
@@ -46,7 +46,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.0",
+    "@ionic/app-scripts": "^3.2.3",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
