--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
+    "@angular/cli": "^7.3.9",
     "@ionic/app-scripts": "^3.2.3",
     "typescript": "~2.6.2"
   },
