--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "@ionic-native/geolocation": "^4.16.0",
     "@ionic-native/splash-screen": "~4.11.0",
     "@ionic-native/status-bar": "~4.11.0",
-    "@ionic/pro": "2.0.3",
-    "@ionic/storage": "2.1.3",
-    "cordova-android": "7.1.1",
+    "@ionic/storage": "^2.1.3",
+    "@types/cordova": "0.0.34",
+    "cordova-android": "^7.0.0",
+    "cordova-ios": "^4.5.5",
     "cordova-plugin-ble-central": "^1.2.2",
     "cordova-plugin-bluetooth-serial": "^0.4.7",
     "cordova-plugin-compat": "^1.2.0",
@@ -39,6 +40,7 @@
     "cordova-plugin-ionic-webview": "^2.1.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^3.2.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -62,10 +64,12 @@
       "cordova-plugin-ble-central": {},
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
-      }
+      },
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
