--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@angular/router": "^5.2.11",
-    "@ionic-native/ble": "^4.12.0",
+    "@ionic-native/ble": "^4.20.0",
+    "@ionic-native/bluetooth-le": "^4.20.0",
     "@ionic-native/bluetooth-serial": "^4.12.0",
     "@ionic-native/core": "~4.11.0",
     "@ionic-native/geolocation": "^4.16.0",
@@ -33,6 +34,7 @@
     "cordova-ios": "^4.5.5",
     "cordova-plugin-ble-central": "^1.2.2",
     "cordova-plugin-bluetooth-serial": "^0.4.7",
+    "cordova-plugin-bluetoothle": "^4.5.5",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.0.1",
@@ -65,7 +67,8 @@
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
       },
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-bluetoothle": {}
     },
     "platforms": [
       "android",
